# xrd_mods_downloader

./: Cargo.toml  README.md
.github/workflows/: main.yml
old/: README.md
old/src/actual_new_ratatui_app/: mod.rs
old/src/manager/: mod.rs
old/src/stuff/: mod.rs
src/: main.rs  manager.rs
src/actual_new_ratatui_app/: mod.rs
src/apps/: mod.rs
src/download_manager/: mod.rs
src/functions/: mod.rs
src/manager/: mod.rs
src/my_ratatui_app/: mod.rs
src/ratatui_app/: functions.rs  mod.rs
src/stuff/: mod.rs
