[package]
name = "xrd_mods_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
futures = {version = "0.3.31"}
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140" # for our async runtime
inquire = "0.7.5"
downloader = "0.2.8"