[package]
name = "xrd_mods_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
futures = {version = "0.3.31"}
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140" # for our async runtime
inquire = "0.7.5"
downloader = "0.2.8"
zip = "2.6.1"
dirs = "6.0.0"

color-eyre = "0.6.3"
ratatui = "0.29.0"
crossterm = "0.29.0"
strum = "0.26.3"
chrono = "0.4.40"
itertools = "0.13.0"

lipsum = {version = "0.9.1"}
derive_setters = {version = "0.1.6"}

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"